fix: remove extra space of menu bar

--- a/menu-app/src/app/menu-components/menu/menu.component.scss
+++ b/menu-app/src/app/menu-components/menu/menu.component.scss
@@ -170,10 +170,6 @@
     margin: 3em 3em 1em 3em;
     border-radius: 40px;
   }
-
-  .desktop-background {
-    padding-top: 3em;
-  }
 }
 
 .quill-view {
